<resources>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="app_name">Tire Pressure Guide</string>
    <string name="bike_and_gear">Bike &amp; Gear</string>
    <string name="bike_and_gear_weight">Bike &amp; Gear Weight</string>
    <string name="body">Body</string>
    <string name="body_weight">Body Weight</string>
    <string name="calculate">Calculate Tire Pressures</string>
    <string name="created_new_profile">Created a new profile with id: %1$d</string>
    <string name="front">Front</string>
    <string name="front_tire">Front Tire</string>
    <string name="front_tire_load">Front Load</string>
    <string name="front_tire_width">Front Tire Width</string>
    <string name="help">Help</string>
    <string name="help_and_settings">Help &amp; Settings></string>
    <string name="lbs">(lbs)</string>
    <string name="load_units">(% or lbs)</string>
    <string name="millimeters">(mm)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="psi">(psi)</string>
    <string name="profile_name">Profile/Rider name</string>
    <string name="profiles">Profile name</string>
    <string name="rider_type">Rider type</string>
    <string name="rear">Rear</string>
    <string name="rear_tire">Rear Tire</string>
    <string name="rear_tire_load">Rear Load</string>
    <string name="rear_tire_width">Rear Tire Width</string>
    <string name="recent">Recent</string>
    <string name="recommended_tire_pressure">Recommended Tire Pressure</string>
    <string name="save_profile">Save Profile</string>
    <string name="settings">Settings</string>
    <string name="type_casual">Casual</string>
    <string name="type_racer">Racer</string>
    <string name="type_sport">Sport</string>
    <string name="updated_existing_profile">Updated existing profile</string>
    <string name="zero">0</string>

    <string-array name="load_array">
        <item>%</item>
        <item>lbs</item>
    </string-array>

    <string-array name="width_array">
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
    </string-array>
</resources>
