<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TireGuideActivity"
    tools:showIn="@layout/app_bar_tire_guide">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/profileText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profiles"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/profileEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/profile_name"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/profile_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLength="32"
            android:minHeight="@dimen/touch_target"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/profileText"
            app:layout_constraintTop_toBottomOf="@+id/profileText" />

        <TextView
            android:id="@+id/bodyWeightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/body_weight"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/bodyWeightUnitsText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileEdit" />

        <TextView
            android:id="@+id/bodyWeightUnitsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_4"
            android:layout_marginEnd="@dimen/spacing_8"
            android:text="@string/lbs"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/bodyWeightText"
            app:layout_constraintEnd_toStartOf="@+id/bikeWeightText"
            app:layout_constraintStart_toEndOf="@+id/bodyWeightText" />

        <TextView
            android:id="@+id/bikeWeightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/bike_and_gear_weight"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/bikeWeightUnitsText"
            app:layout_constraintStart_toStartOf="@+id/tireWidthRearText"
            app:layout_constraintTop_toBottomOf="@+id/profileEdit" />

        <TextView
            android:id="@+id/bikeWeightUnitsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_4"
            android:text="@string/lbs"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/bikeWeightText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bikeWeightText" />

        <EditText
            android:id="@+id/bodyWeightEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/body"
            android:hint="@string/body"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:minHeight="@dimen/touch_target"
            app:layout_constraintEnd_toStartOf="@+id/bikeWeightEdit"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bodyWeightText" />

        <EditText
            android:id="@+id/bikeWeightEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/bike_and_gear"
            android:hint="@string/bike_and_gear"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:minHeight="@dimen/touch_target"
            app:layout_constraintStart_toStartOf="@+id/tireWidthRearText"
            app:layout_constraintTop_toBottomOf="@+id/bikeWeightText" />

        <TextView
            android:id="@+id/tireWidthFrontText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/front_tire_width"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tireWidthRearText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bodyWeightEdit" />

        <TextView
            android:id="@+id/tireWidthRearText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/rear_tire_width"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tireWidthFrontText"
            app:layout_constraintTop_toBottomOf="@+id/bodyWeightEdit" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputFrontTireType"
            style="@style/TextInputLayoutDropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/frontWidthSpinner"
            app:layout_constraintEnd_toStartOf="@id/frontWidthUnitsText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tireWidthFrontText">

            <AutoCompleteTextView
                android:id="@+id/frontWidthSpinner"
                style="@style/AutoCompleteEditTextDropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/frontWidthUnitsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_4"
            android:text="@string/millimeters"
            app:layout_constraintBaseline_toBaselineOf="@+id/textInputFrontTireType"
            app:layout_constraintStart_toEndOf="@+id/textInputFrontTireType" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputRearTireType"
            style="@style/TextInputLayoutDropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/rearWidthSpinner"
            app:layout_constraintStart_toStartOf="@+id/tireWidthRearText"
            app:layout_constraintTop_toBottomOf="@+id/tireWidthRearText">

            <AutoCompleteTextView
                android:id="@+id/rearWidthSpinner"
                style="@style/AutoCompleteEditTextDropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/rearWidthUnitsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_4"
            android:text="@string/millimeters"
            app:layout_constraintBaseline_toBaselineOf="@+id/textInputRearTireType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textInputRearTireType" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputRiderType"
            style="@style/TextInputLayoutDropdown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_16"
            android:hint="@string/rider_type"
            android:labelFor="@+id/riderTypeSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputFrontTireType">

            <AutoCompleteTextView
                android:id="@+id/riderTypeSpinner"
                style="@style/AutoCompleteEditTextDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/frontLoadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/front_tire_load"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/frontLoadUnitsText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputRiderType" />

        <TextView
            android:id="@+id/frontLoadUnitsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_4"
            android:layout_marginEnd="@dimen/spacing_8"
            android:text="@string/load_units"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/frontLoadText"
            app:layout_constraintEnd_toStartOf="@id/rearLoadText"
            app:layout_constraintStart_toEndOf="@id/frontLoadText" />

        <TextView
            android:id="@+id/rearLoadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/rear_tire_load"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/rearLoadUnitsText"
            app:layout_constraintStart_toStartOf="@id/tireWidthRearText"
            app:layout_constraintTop_toBottomOf="@+id/textInputRiderType" />

        <TextView
            android:id="@+id/rearLoadUnitsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_4"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/load_units"
            android:textAppearance="?android:textAppearanceSmall"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/rearLoadText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/rearLoadText" />

        <EditText
            android:id="@+id/frontLoadEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/front"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/front"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:minHeight="@dimen/touch_target"
            app:layout_constraintBottom_toBottomOf="@+id/frontLoadUnitsSpinner"
            app:layout_constraintEnd_toStartOf="@+id/frontLoadUnitsSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/frontLoadUnitsSpinner" />

        <Spinner
            android:id="@+id/frontLoadUnitsSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:minHeight="@dimen/touch_target"
            app:layout_constraintStart_toEndOf="@+id/frontLoadEdit"
            app:layout_constraintTop_toBottomOf="@+id/frontLoadText" />

        <EditText
            android:id="@+id/rearLoadEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/rear"
            android:hint="@string/rear"
            android:imeOptions="actionGo"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:minHeight="@dimen/touch_target"
            app:layout_constraintBottom_toBottomOf="@+id/rearLoadUnitsSpinner"
            app:layout_constraintEnd_toStartOf="@+id/rearLoadUnitsSpinner"
            app:layout_constraintStart_toStartOf="@+id/tireWidthRearText"
            app:layout_constraintTop_toTopOf="@+id/rearLoadUnitsSpinner" />

        <Spinner
            android:id="@+id/rearLoadUnitsSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:minHeight="@dimen/touch_target"
            app:layout_constraintStart_toEndOf="@+id/rearLoadEdit"
            app:layout_constraintTop_toBottomOf="@+id/rearLoadText" />

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_16"
            android:minHeight="@dimen/touch_target"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frontLoadEdit" />

        <TextView
            android:id="@+id/RecommendedTirePressureText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/recommended_tire_pressure"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculateButton" />

        <TextView
            android:id="@+id/frontTireText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_4"
            android:text="@string/front_tire"
            android:textAppearance="?android:textAppearanceLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RecommendedTirePressureText" />

        <TextView
            android:id="@+id/frontTirePressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAppearance="?android:textAppearanceLarge"
            app:layout_constraintBaseline_toBaselineOf="@+id/frontTireText"
            app:layout_constraintEnd_toStartOf="@+id/frontTireUnitsText"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/tireWidthRearText" />

        <TextView
            android:id="@+id/frontTireUnitsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_4"
            android:text="@string/psi"
            android:textAppearance="?android:textAppearanceLarge"
            app:layout_constraintBaseline_toBaselineOf="@+id/frontTirePressure"
            app:layout_constraintStart_toEndOf="@+id/frontTirePressure" />

        <TextView
            android:id="@+id/rearTireText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rear_tire"
            android:textAppearance="?android:textAppearanceLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frontTireText" />

        <TextView
            android:id="@+id/rearTirePressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAppearance="?android:textAppearanceLarge"
            app:layout_constraintBaseline_toBaselineOf="@+id/rearTireText"
            app:layout_constraintEnd_toEndOf="@+id/frontTirePressure"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/frontTirePressure" />

        <TextView
            android:id="@+id/rearTireUnitsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/psi"
            android:textAppearance="?android:textAppearanceLarge"
            app:layout_constraintBaseline_toBaselineOf="@+id/rearTirePressure"
            app:layout_constraintStart_toStartOf="@+id/frontTireUnitsText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
